--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -248,6 +248,238 @@
     "df = pd.read_csv('data/risk_factors_cervical_cancer.csv', encoding='latin1')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>STDs: Number of diagnosis</th>\n",
+       "      <th>Dx:Cancer</th>\n",
+       "      <th>Dx:CIN</th>\n",
+       "      <th>Dx:HPV</th>\n",
+       "      <th>Dx</th>\n",
+       "      <th>Hinselmann</th>\n",
+       "      <th>Schiller</th>\n",
+       "      <th>Citology</th>\n",
+       "      <th>Biopsy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>26.820513</td>\n",
+       "      <td>0.087413</td>\n",
+       "      <td>0.020979</td>\n",
+       "      <td>0.010490</td>\n",
+       "      <td>0.020979</td>\n",
+       "      <td>0.027972</td>\n",
+       "      <td>0.040793</td>\n",
+       "      <td>0.086247</td>\n",
+       "      <td>0.051282</td>\n",
+       "      <td>0.064103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.497948</td>\n",
+       "      <td>0.302545</td>\n",
+       "      <td>0.143398</td>\n",
+       "      <td>0.101939</td>\n",
+       "      <td>0.143398</td>\n",
+       "      <td>0.164989</td>\n",
+       "      <td>0.197925</td>\n",
+       "      <td>0.280892</td>\n",
+       "      <td>0.220701</td>\n",
+       "      <td>0.245078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Age  STDs: Number of diagnosis   Dx:Cancer      Dx:CIN  \\\n",
+       "count  858.000000                 858.000000  858.000000  858.000000   \n",
+       "mean    26.820513                   0.087413    0.020979    0.010490   \n",
+       "std      8.497948                   0.302545    0.143398    0.101939   \n",
+       "min     13.000000                   0.000000    0.000000    0.000000   \n",
+       "25%     20.000000                   0.000000    0.000000    0.000000   \n",
+       "50%     25.000000                   0.000000    0.000000    0.000000   \n",
+       "75%     32.000000                   0.000000    0.000000    0.000000   \n",
+       "max     84.000000                   3.000000    1.000000    1.000000   \n",
+       "\n",
+       "           Dx:HPV          Dx  Hinselmann    Schiller    Citology      Biopsy  \n",
+       "count  858.000000  858.000000  858.000000  858.000000  858.000000  858.000000  \n",
+       "mean     0.020979    0.027972    0.040793    0.086247    0.051282    0.064103  \n",
+       "std      0.143398    0.164989    0.197925    0.280892    0.220701    0.245078  \n",
+       "min      0.000000    0.000000    0.000000    0.000000    0.000000    0.000000  \n",
+       "25%      0.000000    0.000000    0.000000    0.000000    0.000000    0.000000  \n",
+       "50%      0.000000    0.000000    0.000000    0.000000    0.000000    0.000000  \n",
+       "75%      0.000000    0.000000    0.000000    0.000000    0.000000    0.000000  \n",
+       "max      1.000000    1.000000    1.000000    1.000000    1.000000    1.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age                                    int64\n",
+      "Number of sexual partners             object\n",
+      "First sexual intercourse              object\n",
+      "Num of pregnancies                    object\n",
+      "Smokes                                object\n",
+      "Smokes (years)                        object\n",
+      "Smokes (packs/year)                   object\n",
+      "Hormonal Contraceptives               object\n",
+      "Hormonal Contraceptives (years)       object\n",
+      "IUD                                   object\n",
+      "IUD (years)                           object\n",
+      "STDs                                  object\n",
+      "STDs (number)                         object\n",
+      "STDs:condylomatosis                   object\n",
+      "STDs:cervical condylomatosis          object\n",
+      "STDs:vaginal condylomatosis           object\n",
+      "STDs:vulvo-perineal condylomatosis    object\n",
+      "STDs:syphilis                         object\n",
+      "STDs:pelvic inflammatory disease      object\n",
+      "STDs:genital herpes                   object\n",
+      "STDs:molluscum contagiosum            object\n",
+      "STDs:AIDS                             object\n",
+      "STDs:HIV                              object\n",
+      "STDs:Hepatitis B                      object\n",
+      "STDs:HPV                              object\n",
+      "STDs: Number of diagnosis              int64\n",
+      "STDs: Time since first diagnosis      object\n",
+      "STDs: Time since last diagnosis       object\n",
+      "Dx:Cancer                              int64\n",
+      "Dx:CIN                                 int64\n",
+      "Dx:HPV                                 int64\n",
+      "Dx                                     int64\n",
+      "Hinselmann                             int64\n",
+      "Schiller                               int64\n",
+      "Citology                               int64\n",
+      "Biopsy                                 int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataTypes = df.dtypes\n",
+    "print(dataTypes)"
+   ]
   }
  ],
  "metadata": {
