cleaned up data if needed

--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "max      1.000000    1.000000    1.000000    1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -479,6 +479,91 @@
    "source": [
     "dataTypes = df.dtypes\n",
     "print(dataTypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfN = pd.read_csv('data/risk_factors_cervical_cancer.csv', encoding='latin1')\n",
+    "\n",
+    "convertColumns = ['Number of sexual partners', 'First sexual intercourse', 'Num of pregnancies', \n",
+    "                      'Smokes (years)', 'Smokes (packs/year)', 'Hormonal Contraceptives (years)', \n",
+    "                      'IUD (years)', 'STDs (number)', 'STDs: Number of diagnosis', \n",
+    "                      'STDs: Time since first diagnosis', 'STDs: Time since last diagnosis']\n",
+    "for col in convertColumns:\n",
+    "    dfN[col] = pd.to_numeric(dfN[col], errors='coerce')\n",
+    "\n",
+    "for col in df.columns:\n",
+    "    if dfN[col].dtype == 'object':\n",
+    "        dfN[col].fillna(dfN[col].mode()[0], inplace=True)\n",
+    "    else:\n",
+    "        dfN[col].fillna(dfN[col].median(), inplace=True)\n",
+    "\n",
+    "binaryCols = ['Smokes', 'Hormonal Contraceptives', 'IUD', 'STDs', 'STDs:condylomatosis', \n",
+    "                  'STDs:vaginal condylomatosis', 'STDs:vulvo-perineal condylomatosis', 'STDs:syphilis', \n",
+    "                  'STDs:pelvic inflammatory disease', 'STDs:genital herpes', 'STDs:molluscum contagiosum', \n",
+    "                  'STDs:AIDS', 'STDs:HIV', 'STDs:Hepatitis B', 'STDs:HPV']\n",
+    "for col in binaryCols:\n",
+    "    dfN[col] = dfN[col].apply(lambda x: 1 if x == 'Yes' or x == 'True' else 0)\n",
+    "\n",
+    "dfN.to_csv('data/cleanedCervicalCancerRiskFactors.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age                                     int64\n",
+      "Number of sexual partners             float64\n",
+      "First sexual intercourse              float64\n",
+      "Num of pregnancies                    float64\n",
+      "Smokes                                  int64\n",
+      "Smokes (years)                        float64\n",
+      "Smokes (packs/year)                   float64\n",
+      "Hormonal Contraceptives                 int64\n",
+      "Hormonal Contraceptives (years)       float64\n",
+      "IUD                                     int64\n",
+      "IUD (years)                           float64\n",
+      "STDs                                    int64\n",
+      "STDs (number)                         float64\n",
+      "STDs:condylomatosis                     int64\n",
+      "STDs:cervical condylomatosis           object\n",
+      "STDs:vaginal condylomatosis             int64\n",
+      "STDs:vulvo-perineal condylomatosis      int64\n",
+      "STDs:syphilis                           int64\n",
+      "STDs:pelvic inflammatory disease        int64\n",
+      "STDs:genital herpes                     int64\n",
+      "STDs:molluscum contagiosum              int64\n",
+      "STDs:AIDS                               int64\n",
+      "STDs:HIV                                int64\n",
+      "STDs:Hepatitis B                        int64\n",
+      "STDs:HPV                                int64\n",
+      "STDs: Number of diagnosis               int64\n",
+      "STDs: Time since first diagnosis      float64\n",
+      "STDs: Time since last diagnosis       float64\n",
+      "Dx:Cancer                               int64\n",
+      "Dx:CIN                                  int64\n",
+      "Dx:HPV                                  int64\n",
+      "Dx                                      int64\n",
+      "Hinselmann                              int64\n",
+      "Schiller                                int64\n",
+      "Citology                                int64\n",
+      "Biopsy                                  int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataTypesN = dfN.dtypes\n",
+    "print(dataTypesN)"
    ]
   }
  ],
