the variable types make sense now

--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -483,29 +483,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfN = pd.read_csv('data/risk_factors_cervical_cancer.csv', encoding='latin1')\n",
     "\n",
     "convertColumns = ['Number of sexual partners', 'First sexual intercourse', 'Num of pregnancies', \n",
-    "                      'Smokes (years)', 'Smokes (packs/year)', 'Hormonal Contraceptives (years)', \n",
-    "                      'IUD (years)', 'STDs (number)', 'STDs: Number of diagnosis', \n",
-    "                      'STDs: Time since first diagnosis', 'STDs: Time since last diagnosis']\n",
+    "                  'Smokes (years)', 'Smokes (packs/year)', 'Hormonal Contraceptives (years)', \n",
+    "                  'IUD (years)', 'STDs (number)', 'STDs: Number of diagnosis', \n",
+    "                  'STDs: Time since first diagnosis', 'STDs: Time since last diagnosis']\n",
     "for col in convertColumns:\n",
     "    dfN[col] = pd.to_numeric(dfN[col], errors='coerce')\n",
     "\n",
-    "for col in df.columns:\n",
+    "# Corrección: Usar dfN.columns en lugar de df.columns\n",
+    "for col in dfN.columns:\n",
     "    if dfN[col].dtype == 'object':\n",
     "        dfN[col].fillna(dfN[col].mode()[0], inplace=True)\n",
     "    else:\n",
     "        dfN[col].fillna(dfN[col].median(), inplace=True)\n",
     "\n",
+    "# Convertir específicamente las columnas que deben ser enteras\n",
+    "intColumns = ['Number of sexual partners', 'First sexual intercourse', 'Num of pregnancies']\n",
+    "for col in intColumns:\n",
+    "    # Primero rellenar NaN con -1 para indicar claramente un valor faltante\n",
+    "    dfN[col] = dfN[col].fillna(-1).astype(int)\n",
+    "\n",
     "binaryCols = ['Smokes', 'Hormonal Contraceptives', 'IUD', 'STDs', 'STDs:condylomatosis', \n",
-    "                  'STDs:vaginal condylomatosis', 'STDs:vulvo-perineal condylomatosis', 'STDs:syphilis', \n",
-    "                  'STDs:pelvic inflammatory disease', 'STDs:genital herpes', 'STDs:molluscum contagiosum', \n",
-    "                  'STDs:AIDS', 'STDs:HIV', 'STDs:Hepatitis B', 'STDs:HPV']\n",
+    "              'STDs:vaginal condylomatosis', 'STDs:vulvo-perineal condylomatosis', 'STDs:syphilis', \n",
+    "              'STDs:pelvic inflammatory disease', 'STDs:genital herpes', 'STDs:molluscum contagiosum', \n",
+    "              'STDs:AIDS', 'STDs:HIV', 'STDs:Hepatitis B', 'STDs:HPV']\n",
     "for col in binaryCols:\n",
     "    dfN[col] = dfN[col].apply(lambda x: 1 if x == 'Yes' or x == 'True' else 0)\n",
     "\n",
@@ -514,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -522,9 +529,9 @@
      "output_type": "stream",
      "text": [
       "Age                                     int64\n",
-      "Number of sexual partners             float64\n",
-      "First sexual intercourse              float64\n",
-      "Num of pregnancies                    float64\n",
+      "Number of sexual partners               int32\n",
+      "First sexual intercourse                int32\n",
+      "Num of pregnancies                      int32\n",
       "Smokes                                  int64\n",
       "Smokes (years)                        float64\n",
       "Smokes (packs/year)                   float64\n",
