remove low correlation variables that contain many NaN values

--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1919,6 +1919,42 @@
     "sns.heatmap(boolDf, cbar=False, cmap='viridis')\n",
     "plt.title('Heatmap of Missing Values (NaN) in the Dataset')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the correlation between variables is low and there are many NaN values in the following columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Age', 'Number of sexual partners', 'First sexual intercourse',\n",
+      "       'Num of pregnancies', 'Smokes', 'Smokes (packs/year)',\n",
+      "       'Hormonal Contraceptives', 'Hormonal Contraceptives (years)', 'IUD',\n",
+      "       'STDs', 'STDs (number)', 'STDs:condylomatosis',\n",
+      "       'STDs:cervical condylomatosis', 'STDs:vaginal condylomatosis',\n",
+      "       'STDs:vulvo-perineal condylomatosis', 'STDs:syphilis',\n",
+      "       'STDs:pelvic inflammatory disease', 'STDs:genital herpes',\n",
+      "       'STDs:molluscum contagiosum', 'STDs:AIDS', 'STDs:HIV',\n",
+      "       'STDs:Hepatitis B', 'STDs:HPV', 'STDs: Number of diagnosis',\n",
+      "       'Dx:Cancer', 'Dx:CIN', 'Dx:HPV', 'Hinselmann', 'Schiller', 'Citology',\n",
+      "       'Biopsy'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleanedDf = df.drop(['Smokes (years)', 'IUD (years)', 'STDs: Time since first diagnosis', 'STDs: Time since last diagnosis', 'Dx'], axis=1)\n",
+    "print(cleanedDf.columns)"
    ]
   }
  ],
