--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -1956,6 +1956,117 @@
     "cleanedDf = df.drop(['Smokes (years)', 'IUD (years)', 'STDs: Time since first diagnosis', 'STDs: Time since last diagnosis', 'Dx'], axis=1)\n",
     "print(cleanedDf.columns)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for categorical variables, we will replace NaNs with the most frequent value (mode)\n",
+    "categoricalCols = [\n",
+    "    'Smokes', 'Hormonal Contraceptives', 'IUD', 'STDs', \n",
+    "    'STDs:condylomatosis', 'STDs:cervical condylomatosis', 'STDs:vaginal condylomatosis',\n",
+    "    'STDs:vulvo-perineal condylomatosis', 'STDs:syphilis', 'STDs:pelvic inflammatory disease', \n",
+    "    'STDs:genital herpes', 'STDs:molluscum contagiosum', 'STDs:AIDS', 'STDs:HIV', \n",
+    "    'STDs:Hepatitis B', 'STDs:HPV', 'Dx:Cancer', 'Dx:CIN', 'Dx:HPV', 'Hinselmann',\n",
+    "    'Schiller', 'Citology', 'Biopsy'\n",
+    "]\n",
+    "\n",
+    "for column in categoricalCols:\n",
+    "    modeVal = cleanedDf[column].mode()[0]\n",
+    "    cleanedDf[column].fillna(modeVal, inplace=True)\n",
+    "\n",
+    "# for discrete quantitative variables, we will replace NaNs with the median\n",
+    "discreteCols = [\n",
+    "    'Age', 'Number of sexual partners', 'First sexual intercourse', 'Num of pregnancies', \n",
+    "    'Smokes (packs/year)', 'Hormonal Contraceptives (years)', 'STDs (number)', 'STDs: Number of diagnosis'\n",
+    "]\n",
+    "\n",
+    "for column in discreteCols:\n",
+    "    medianValue = cleanedDf[column].median()\n",
+    "    cleanedDf[column].fillna(medianValue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 858 entries, 0 to 857\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column                              Non-Null Count  Dtype  \n",
+      "---  ------                              --------------  -----  \n",
+      " 0   Age                                 858 non-null    int64  \n",
+      " 1   Number of sexual partners           858 non-null    int32  \n",
+      " 2   First sexual intercourse            858 non-null    float64\n",
+      " 3   Num of pregnancies                  858 non-null    float64\n",
+      " 4   Smokes                              858 non-null    float64\n",
+      " 5   Smokes (packs/year)                 858 non-null    float64\n",
+      " 6   Hormonal Contraceptives             858 non-null    float64\n",
+      " 7   Hormonal Contraceptives (years)     858 non-null    float64\n",
+      " 8   IUD                                 858 non-null    float64\n",
+      " 9   STDs                                858 non-null    float64\n",
+      " 10  STDs (number)                       858 non-null    float64\n",
+      " 11  STDs:condylomatosis                 858 non-null    object \n",
+      " 12  STDs:cervical condylomatosis        858 non-null    object \n",
+      " 13  STDs:vaginal condylomatosis         858 non-null    object \n",
+      " 14  STDs:vulvo-perineal condylomatosis  858 non-null    object \n",
+      " 15  STDs:syphilis                       858 non-null    object \n",
+      " 16  STDs:pelvic inflammatory disease    858 non-null    object \n",
+      " 17  STDs:genital herpes                 858 non-null    object \n",
+      " 18  STDs:molluscum contagiosum          858 non-null    object \n",
+      " 19  STDs:AIDS                           858 non-null    object \n",
+      " 20  STDs:HIV                            858 non-null    object \n",
+      " 21  STDs:Hepatitis B                    858 non-null    object \n",
+      " 22  STDs:HPV                            858 non-null    object \n",
+      " 23  STDs: Number of diagnosis           858 non-null    int64  \n",
+      " 24  Dx:Cancer                           858 non-null    int64  \n",
+      " 25  Dx:CIN                              858 non-null    int64  \n",
+      " 26  Dx:HPV                              858 non-null    int64  \n",
+      " 27  Hinselmann                          858 non-null    int64  \n",
+      " 28  Schiller                            858 non-null    int64  \n",
+      " 29  Citology                            858 non-null    int64  \n",
+      " 30  Biopsy                              858 non-null    int64  \n",
+      "dtypes: float64(9), int32(1), int64(9), object(12)\n",
+      "memory usage: 204.6+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cleanedDf.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confirmation that there is no NaN value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "anyNans = cleanedDf.isna().any().any()\n",
+    "print(anyNans)"
+   ]
   }
  ],
  "metadata": {
