filtered association rules

--- a/src/cervicalCancerRiskFactors.ipynb
+++ b/src/cervicalCancerRiskFactors.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "max      1.000000    1.000000    1.000000    1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
        "       0.99981474, 0.99990752, 0.99997797, 1.        ])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
        "Biopsy                           1.702141e-03  0.005690 -0.000020"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,38 +2428,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   antecedents                                   consequents  \\\n",
-      "0                        (0-1)                                           (0)   \n",
-      "1                          (0)                                         (0-1)   \n",
-      "2                          (0)                                         (0.0)   \n",
-      "3                        (0.0)                                           (0)   \n",
-      "4                          (0)                                           (1)   \n",
-      "...                        ...                                           ...   \n",
-      "202840  (1-2, 3-5, Non-smoker)              (2-4, 0, 20-30, 1.0, 15-18, 0.0)   \n",
-      "202841     (20-30, 15-18, 3-5)           (2-4, 1-2, 0, 1.0, 0.0, Non-smoker)   \n",
-      "202842              (1-2, 2-4)  (0, 20-30, 3-5, 1.0, 15-18, 0.0, Non-smoker)   \n",
-      "202843            (20-30, 2-4)    (1-2, 0, 3-5, 1.0, 15-18, 0.0, Non-smoker)   \n",
-      "202844            (15-18, 2-4)    (1-2, 0, 20-30, 3-5, 1.0, 0.0, Non-smoker)   \n",
+      "              antecedents                                   consequents  \\\n",
+      "0                   (0-1)                                           (0)   \n",
+      "1                     (0)                                         (0-1)   \n",
+      "2                     (0)                                         (0.0)   \n",
+      "3                   (0.0)                                           (0)   \n",
+      "4                     (1)                                           (0)   \n",
+      "...                   ...                                           ...   \n",
+      "202840  (2-4, 3-5, 20-30)         (0, Non-smoker, 15-18, 0.0, 1-2, 1.0)   \n",
+      "202841  (2-4, 1.0, 20-30)         (0, Non-smoker, 15-18, 0.0, 1-2, 3-5)   \n",
+      "202842       (2-4, 15-18)    (0, Non-smoker, 0.0, 1-2, 3-5, 1.0, 20-30)   \n",
+      "202843         (2-4, 1-2)  (0, Non-smoker, 15-18, 0.0, 3-5, 1.0, 20-30)   \n",
+      "202844       (2-4, 20-30)    (0, Non-smoker, 15-18, 0.0, 1-2, 3-5, 1.0)   \n",
       "\n",
       "         support  confidence  \n",
       "0       0.240093    1.000000  \n",
       "1       0.240093    0.240093  \n",
       "2       1.000000    1.000000  \n",
       "3       1.000000    1.000000  \n",
-      "4       0.473193    0.473193  \n",
+      "4       0.473193    1.000000  \n",
       "...          ...         ...  \n",
-      "202840  0.015152    0.116071  \n",
-      "202841  0.015152    0.128713  \n",
-      "202842  0.015152    0.135417  \n",
-      "202843  0.015152    0.120370  \n",
-      "202844  0.015152    0.108333  \n",
+      "202840  0.015152    0.200000  \n",
+      "202841  0.015152    0.138298  \n",
+      "202842  0.015152    0.108333  \n",
+      "202843  0.015152    0.135417  \n",
+      "202844  0.015152    0.120370  \n",
       "\n",
       "[202845 rows x 4 columns]\n"
      ]
@@ -2480,6 +2480,47 @@
     "# generate and print association rules\n",
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.1)\n",
     "print(rules[['antecedents', 'consequents', 'support', 'confidence']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            antecedents             consequents   support  confidence\n",
+      "0                 (0-1)                     (0)  0.240093    1.000000\n",
+      "1                   (0)                   (0.0)  1.000000    1.000000\n",
+      "2                 (0.0)                     (0)  1.000000    1.000000\n",
+      "3                   (1)                     (0)  0.473193    1.000000\n",
+      "4                 (1-2)                     (0)  0.490676    1.000000\n",
+      "...                 ...                     ...       ...         ...\n",
+      "4118    (2, 15-18, 1-2)    (Non-smoker, 0, 1.0)  0.061772    0.803030\n",
+      "4134  (<20, 15-18, 1-2)    (Non-smoker, 0, 1.0)  0.050117    0.843137\n",
+      "4193      (<20, 1, 1-2)  (Non-smoker, 1.0, 0.0)  0.057110    0.816667\n",
+      "4219    (2, 15-18, 1-2)  (Non-smoker, 1.0, 0.0)  0.061772    0.803030\n",
+      "4235  (<20, 15-18, 1-2)  (Non-smoker, 1.0, 0.0)  0.050117    0.843137\n",
+      "\n",
+      "[2491 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "frequent_itemsets = apriori(df_transformed, min_support=0.05, use_colnames=True)\n",
+    "\n",
+    "# generate association rules with high confidence\n",
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.8)\n",
+    "\n",
+    "# filter rules by the length of the antecedent and consequent\n",
+    "rules['antecedent_len'] = rules['antecedents'].apply(lambda x: len(x))\n",
+    "rules['consequent_len'] = rules['consequents'].apply(lambda x: len(x))\n",
+    "filtered_rules = rules[(rules['antecedent_len'] <= 3) & (rules['consequent_len'] <= 3)]\n",
+    "\n",
+    "# display the filtered rules\n",
+    "print(filtered_rules[['antecedents', 'consequents', 'support', 'confidence']])\n"
    ]
   }
  ],
